[WGSL] shader,validation,expression,binary,bitwise_shift:* is failing https://bugs.webkit.org/show_bug.cgi?id=270094 rdar://123636621

Reviewed by Mike Wyrzykowski.

Add missing validation on the shift value.

* Source/WebGPU/WGSL/ConstantFunctions.h:
(WGSL::CONSTANT_FUNCTION):

Canonical link: https://commits.webkit.org/275372@main